--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
-    "daisyui": "^5.1.9"
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo": "^8.0.13",
+    "daisyui": "^5.1.9",
+    "stimulus-vite-helpers": "^3.1.0"
   }
 }
