--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: daisy_panel_test
         ports:
           - 5432:5432
@@ -70,8 +70,8 @@ jobs:
       - name: Set up Database
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/daisy_panel_test
-          POSTGRES_PASSWORD: postgres
+          DATABASE_URL: postgres://postgres:password@localhost:5432/daisy_panel_test
+          POSTGRES_PASSWORD: password
         run: |
           bundle exec rails db:create
           bundle exec rails db:schema:load
@@ -79,15 +79,16 @@ jobs:
       - name: Precompile assets
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/daisy_panel_test
-          POSTGRES_PASSWORD: postgres
+          DATABASE_URL: postgres://postgres:password@localhost:5432/daisy_panel_test
+          POSTGRES_PASSWORD: password
         run: bundle exec rails assets:precompile
 
       - name: Run RSpec tests
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/daisy_panel_test
-          POSTGRES_PASSWORD: postgres
+          DATABASE_URL: postgres://postgres:password@localhost:5432/daisy_panel_test
+          POSTGRES_PASSWORD: password
+          DEVISE_SECRET_KEY: ${{ secrets.DEVISE_SECRET_KEY }}
           CI: true
         run: bundle exec rspec --format progress
 
