feat: add Node.js setup and dependency installation to CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,15 @@ jobs:
           bundle exec rails db:create
           bundle exec rails db:schema:load
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install Node.js dependencies
+        run: npm install
+
       - name: Precompile assets
         env:
           RAILS_ENV: test
