--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,17 @@ jobs:
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libpq-dev libyaml-dev pkg-config google-chrome-stable
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y \
+            build-essential \
+            git \
+            libpq-dev \
+            libyaml-dev \
+            pkg-config \
+            google-chrome-stable \
+            xvfb
 
       - name: Checkout code
         uses: actions/checkout@v5
@@ -99,7 +108,7 @@ jobs:
           POSTGRES_PASSWORD: password
           DEVISE_SECRET_KEY: ${{ secrets.DEVISE_SECRET_KEY }}
           CI: true
-        run: bundle exec rspec --format progress
+        run: xvfb-run -a bundle exec rspec --format progress
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
@@ -115,4 +124,12 @@ jobs:
         with:
           name: screenshots
           path: ${{ github.workspace }}/tmp/screenshots
+          if-no-files-found: ignore
+
+      - name: Upload test logs
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: test-logs
+          path: log/test.log
           if-no-files-found: ignore
