--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,23 @@ default: &default
 
 
 development:
-  <<: *default
-  database: daisy_panel_development
-  username: postgres
-  password: postgres
-  host: localhost
+  primary: &primary_development
+    <<: *default
+    database: daisy_panel_development
+    username: postgres
+    password: postgres
+    host: localhost
+  cache:
+    <<: *primary_development
+    database: daisy_panel_development_cache
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *primary_development
+    database: daisy_panel_development_queue
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_development
+    database: daisy_panel_development_cable
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -58,12 +70,25 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: daisy_panel_test
-  username: postgres
-  password: postgres
-  host: localhost
-  port: 5432
+  primary: &primary_test
+    <<: *default
+    database: daisy_panel_test
+    username: postgres
+    password: postgres
+    host: localhost
+    port: 5432
+  cache:
+    <<: *primary_test
+    database: daisy_panel_test_cache
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *primary_test
+    database: daisy_panel_test_queue
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_test
+    database: daisy_panel_test_cable
+    migrations_paths: db/cable_migrate
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
