--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^5.4.20",
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo": "^8.0.13",
+    "@rails/actioncable": "^8.0.201",
     "daisyui": "^5.1.9",
-    "stimulus-vite-helpers": "^3.1.0"
+    "papaparse": "^5.4.1",
+    "stimulus-vite-helpers": "^3.1.0",
+    "vue": "^3.5.13"
   }
 }
