--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
     "vite": "^5.4.20",
     "vite-plugin-ruby": "^5.1.1"
   },
@@ -14,5 +17,10 @@
     "papaparse": "^5.4.1",
     "stimulus-vite-helpers": "^3.1.0",
     "vue": "^3.5.13"
+  },
+  "scripts": {
+    "lint": "eslint app/frontend",
+    "lint:fix": "eslint app/frontend --fix",
+    "lint:check": "eslint app/frontend --max-warnings 0"
   }
 }
