--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo": "^8.0.13",
     "@rails/actioncable": "^8.0.201",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.1.9",
     "papaparse": "^5.4.1",
     "stimulus-vite-helpers": "^3.1.0",
