--- a/config/database.yml
+++ b/config/database.yml
@@ -70,6 +70,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  <% if ENV['CI'] %>
+  <<: *default
+  database: daisy_panel_test
+  username: postgres
+  password: password
+  host: localhost
+  port: 5432
+  <% else %>
   primary: &primary_test
     <<: *default
     database: daisy_panel_test
@@ -89,6 +97,7 @@ test:
     <<: *primary_test
     database: daisy_panel_test_cable
     migrations_paths: db/cable_migrate
+  <% end %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
