--- a/config/database.yml
+++ b/config/database.yml
@@ -120,20 +120,5 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: daisy_panel_production
-    username: daisy_panel
-    password: <%= ENV["DAISY_PANEL_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: daisy_panel_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: daisy_panel_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: daisy_panel_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
